Nested Loop works!!!